--- a/ShallowSeasServer/ShallowSeasServer.csproj
+++ b/ShallowSeasServer/ShallowSeasServer.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Game.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="ShallowSeasServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
