--- a/ShallowSeasServer/ShallowSeasServer.csproj
+++ b/ShallowSeasServer/ShallowSeasServer.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Log.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
