Base64 array (not working)

--- a/ShallowNet/ShallowNet.csproj
+++ b/ShallowNet/ShallowNet.csproj
@@ -38,6 +38,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Base64Array.cs" />
     <Compile Include="ClientWrapper.cs" />
     <Compile Include="DebugLog.cs" />
     <Compile Include="fastJSON\dynamic.cs" />
